--- a/TimeSeries_Regression /TimeSeriesAnalysis.ipynb
+++ b/TimeSeries_Regression /TimeSeriesAnalysis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "1976-08-06                         1.0  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "1990-01-08                     52072.0  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,14 +311,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I do not see any trends.\n"
+      "No, I don't see any trends.\n"
      ]
     },
     {
@@ -337,7 +337,7 @@
    "source": [
     "# Plot just the \"Settle\" column from the dataframe:\n",
     "yen_futures.Settle.plot(figsize=(15,7),title ='Yen Settle Price 1990 - 2020')\n",
-    "print(\"I do not see any trends.\")"
+    "print(\"No, I don't see any trends.\")"
    ]
   },
   {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "1990-01-08  6959.0  49.689938  6909.310062"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
        "<AxesSubplot:title={'center':'2015 till Present Trend vs. Settle Price'}, xlabel='Date'>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
        "<AxesSubplot:title={'center':'2015 till Present Yen Settle Price Noise'}, xlabel='Date'>"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "2019-10-15 -0.469509"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -693,10 +693,10 @@
        "  <th>Method:</th>             <td>css-mle</td>     <th>  S.D. of innovations</th>   <td>0.692</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>          <td>Sun, 21 Feb 2021</td> <th>  AIC                </th> <td>15798.142</td>\n",
+       "  <th>Date:</th>          <td>Wed, 24 Feb 2021</td> <th>  AIC                </th> <td>15798.142</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>              <td>08:26:25</td>     <th>  BIC                </th> <td>15832.765</td>\n",
+       "  <th>Time:</th>              <td>21:29:43</td>     <th>  BIC                </th> <td>15832.765</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Sample:</th>                <td>0</td>        <th>  HQIC               </th> <td>15810.030</td>\n",
@@ -746,8 +746,8 @@
        "Dep. Variable:                      y   No. Observations:                 7514\n",
        "Model:                     ARMA(2, 1)   Log Likelihood               -7894.071\n",
        "Method:                       css-mle   S.D. of innovations              0.692\n",
-       "Date:                Sun, 21 Feb 2021   AIC                          15798.142\n",
-       "Time:                        08:26:25   BIC                          15832.765\n",
+       "Date:                Wed, 24 Feb 2021   AIC                          15798.142\n",
+       "Time:                        21:29:43   BIC                          15832.765\n",
        "Sample:                             0   HQIC                         15810.030\n",
        "                                                                              \n",
        "==============================================================================\n",
@@ -768,14 +768,13 @@
        "\"\"\""
       ]
      },
-     "execution_count": 128,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Output model summary results:\n",
-    "#lower AIC and BIC refelct better accuarcy \n",
     "results.summary()"
    ]
   },
@@ -788,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +796,7 @@
        "<AxesSubplot:title={'center':'5 Day Returns Forecast'}>"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -854,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -887,10 +886,10 @@
        "  <th>Method:</th>             <td>css-mle</td>     <th>  S.D. of innovations</th>   <td>64.281</td>  \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>          <td>Sun, 21 Feb 2021</td> <th>  AIC                </th>  <td>83905.238</td>\n",
+       "  <th>Date:</th>          <td>Wed, 24 Feb 2021</td> <th>  AIC                </th>  <td>83905.238</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>              <td>08:53:58</td>     <th>  BIC                </th>  <td>83960.635</td>\n",
+       "  <th>Time:</th>              <td>21:29:45</td>     <th>  BIC                </th>  <td>83960.635</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>Sample:</th>                <td>1</td>        <th>  HQIC               </th>  <td>83924.259</td>\n",
@@ -958,8 +957,8 @@
        "Dep. Variable:               D.Settle   No. Observations:                 7514\n",
        "Model:                 ARIMA(5, 1, 1)   Log Likelihood              -41944.619\n",
        "Method:                       css-mle   S.D. of innovations             64.281\n",
-       "Date:                Sun, 21 Feb 2021   AIC                          83905.238\n",
-       "Time:                        08:53:58   BIC                          83960.635\n",
+       "Date:                Wed, 24 Feb 2021   AIC                          83905.238\n",
+       "Time:                        21:29:45   BIC                          83960.635\n",
        "Sample:                             1   HQIC                         83924.259\n",
        "                                                                              \n",
        "==================================================================================\n",
@@ -986,36 +985,27 @@
        "\"\"\""
       ]
      },
-     "execution_count": 145,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Output model summary results:\n",
+    "#lower AIC and BIC refelct better accuarcy \n",
     "ARIMA_results.summary()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 199,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Based on the ARIMA model because the p value is greater than 0.05, this is considered a good model, it is statistically significant.\n"
-     ]
-    }
-   ],
    "source": [
-    "print(\"Based on the ARIMA model because the p value is greater than 0.05, this is considered a good model, it is statistically significant.\")"
+    "Assuminng the confidence level is 95%, this is considered to be a bad ARIMA model as it is statistically insignificant because the p value in this model is 0.652 which is greater than 0.05. 95%(confidence level)= (1- 0.95) = 0.05 P Value "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1014,7 @@
        "<AxesSubplot:title={'center':'5 Day Price Forecast'}>"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1078,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1126,10 +1116,10 @@
        "  <th></th>                        <td></td>          <th>  No. Observations:  </th>    <td>7514</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>           <td>Sun, Feb 21 2021</td>  <th>  Df Residuals:      </th>    <td>7514</td>   \n",
+       "  <th>Date:</th>           <td>Wed, Feb 24 2021</td>  <th>  Df Residuals:      </th>    <td>7514</td>   \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>               <td>09:33:42</td>      <th>  Df Model:          </th>      <td>0</td>    \n",
+       "  <th>Time:</th>               <td>21:29:46</td>      <th>  Df Model:          </th>      <td>0</td>    \n",
        "</tr>\n",
        "</table>\n",
        "<table class=\"simpletable\">\n",
@@ -1162,8 +1152,8 @@
        "Distribution:                  Normal   AIC:                           14931.9\n",
        "Method:            Maximum Likelihood   BIC:                           14959.6\n",
        "                                        No. Observations:                 7514\n",
-       "Date:                Sun, Feb 21 2021   Df Residuals:                     7514\n",
-       "Time:                        09:33:42   Df Model:                            0\n",
+       "Date:                Wed, Feb 24 2021   Df Residuals:                     7514\n",
+       "Time:                        21:29:46   Df Model:                            0\n",
        "                               Volatility Model                              \n",
        "=============================================================================\n",
        "                 coef    std err          t      P>|t|       95.0% Conf. Int.\n",
@@ -1178,7 +1168,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 176,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1189,7 @@
        "'2019-10-15'"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1212,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1224,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1282,7 +1272,7 @@
        "2019-10-15  7.434048  7.475745  7.516867  7.557426  7.597434"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1295,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1356,7 +1346,7 @@
        "h.5     7.597434"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1369,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1368,7 @@
        "<AxesSubplot:title={'center':'Final 5 Day Yen Price Forecast'}>"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1430,7 +1420,7 @@
    "metadata": {},
    "source": [
     "Based on the anaylsis, yes I would buy Yen now as it is continuously going up! \n",
-    "Based on the model evalutation, I would not feel confident using these models for trading because the AIC and BIC numbers are high, thus reflecting poorer accuracy. "
+    "Based on the model evalutation, I would not feel confident using these models for trading because the AIC and BIC numbers are high, thus reflecting poor accuracy. "
    ]
   }
  ],
